crates/jarl/tests/integration/snapshots/integration__rmd__rmd_fix_not_applied.snap
---
source: crates/jarl/tests/integration/rmd.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\"test.Rmd\").arg(\"--fix\").arg(\"--allow-no-vcs\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
warning: any_is_na
 --> test.Rmd:2:1
  |
2 | any(is.na(x))
  | ^^^^^^^^^^^^^ `any(is.na(...))` is inefficient.
  |
help: Use `anyNA(...)` instead.

Found 1 error.

----- stderr -----

----- args -----
check test.Rmd --fix --allow-no-vcs
