crates/jarl/tests/integration/snapshots/integration__rmd__rmd_ignore_chunk_suppresses.snap
---
source: crates/jarl/tests/integration/rmd.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
warning: blanket_suppression
 --> test.Rmd:2:1
  |
2 | #| jarl-ignore-chunk
  | ^^^^^^^^^^^^^^^^^^^^ This comment isn't used by Jarl because it is missing a rule to ignore.
  |
help: Use targeted comments instead, e.g., `# jarl-ignore any_is_na: <reason>`.

warning: any_is_na
 --> test.Rmd:3:1
  |
3 | any(is.na(x))
  | ^^^^^^^^^^^^^ `any(is.na(...))` is inefficient.
  |
help: Use `anyNA(...)` instead.

Found 2 errors.

----- stderr -----

----- args -----
check .
