crates/jarl/tests/integration/snapshots/integration__rmd__rmd_ignore_chunk_with_rule.snap
---
source: crates/jarl/tests/integration/rmd.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---

success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check .
