crates/jarl/tests/integration/snapshots/integration__rmd__rmd_pipe_suppression.snap
---
source: crates/jarl/tests/integration/rmd.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
warning: any_is_na
 --> test.Rmd:3:1
  |
3 | any(is.na(x))
  | ^^^^^^^^^^^^^ `any(is.na(...))` is inefficient.
  |
help: Use `anyNA(...)` instead.

Found 1 error.

----- stderr -----

----- args -----
check .
